--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,23 @@
-<section></section>
+<section class="hero">
+  <div class="container">
+    <h1 class="visually-hidden">Simply Chocolate</h1>
+    <p class="hero-descrip">
+      Treat yourself or a loved one to our finest ingredients for a moment of
+      pure delight!
+    </p>
+    <div class="hero-buttons">
+      <button class="hero-btn">Buy now</button>
+      <a href="" id="how it's made" class="hero-btn hero-how-it"
+        >How it's made</a
+      >
+      <a href="" id="footer" class="hero-scroll"
+        >scroll down
+        <span class="scroll-wrap"
+          ><svg width="16" height="16" class="scroll-icon">
+            <use href="./img/sprite.svg#icon-scroll-down22"></use>
+          </svg>
+        </span>
+      </a>
+    </div>
+  </div>
+</section>
