--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,14 +1,17 @@
 <section class="how-its-made">
     <div class="container how-its-made-container">
 <h2 class="how-its-made-title">HOW IT’S <span class="how-its-made-span">MADE?</span> </h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xqXOMDQhDyU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-   <h3 class="ho-its-made-list-title">Try  our chocolates today and discover the perfect balance of flavor</h3>
+<div class="how-its-made-wrap">
+<iframe class="how-it-made-video" src="https://www.youtube.com/embed/xqXOMDQhDyU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ <div class="how-its-made-list-wrap"> 
+<h3 class="how-its-made-list-title">Try  our chocolates today and discover the perfect balance of flavor</h3>
 <ul class="how-its-made-list">
     <li class="how-its-made-item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
 <li class="how-its-made-item">At the same time, prepare a water bath. Melt the butter on it.</li>
 <li class="how-its-made-item">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</li>
 <li class="how-its-made-item">Heat the mixture over low heat, letting it barely boil.</li>
 <li class="how-its-made-item">Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</li></ul>
+</div> 
 </div>
-   
+  </div> 
 </section>
