--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -1,8 +1,8 @@
 <section class="components section">
   <div class="container">
-    <h2 class="title">
+    <h2 class="section-title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
-      <span class="title-accent">TASTE</span> SENSATION
+      <span class="section-title-accent">TASTE</span> SENSATION
     </h2>
     <p class="text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate
