--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,149 @@
-/* Header */
+.header-title {
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.1;
+  letter-spacing: -0.03em;
+  margin-top: 25px;
+  margin-bottom: 19px;
 
-header {
-  color: var(--main-accent-color);
-  font-size: 25px;
+  color: var(--primary-color);
+}
+
+.header-title .two {
+  font-style: italic;
+}
+
+.header-logo {
+  width: 14.32px;
+  height: 17.18px;
+}
+
+.header-logo-titile {
+  margin-left: 6.65px;
+  padding-top: 24.68px;
+}
+
+.header-nav {
+  display: flex;
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    width: 365px;
+  }
+
+  .header {
+    display: flex;
+  }
+
+  .header-title {
+    font-size: 14px;
+    line-height: 1.29;
+  }
+
+  .header-mobile-menu-open {
+    background-color: transparent;
+    padding: 0;
+    line-height: 0;
+    border: 0;
+    margin-left: auto;
+  }
+
+  .header-mobile-menu-open-icon {
+    width: 21px;
+    height: 14px;
+
+  }
+
+  .header-list {
+    display: none;
+  }
+
+  .header-icons-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 734px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1166px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .header-logo {
+    width: 16.36px;
+    height: 19.64px;
+  }
+
+  .header-mobile-menu-open-icon {
+    display: none;
+  }
+
+  .header-list {
+    display: flex;
+    gap: 24px;
+    margin-left: 190px;
+  }
+
+  .header-item {
+    padding-top: 24px;
+    padding-bottom: 36px;
+  }
+
+  .header-item-link {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1, 14;
+    letter-spacing: -0.02em;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-item-link:hover,
+  .header-item-link:focus {
+    color: var(--main-accent-color);
+  }
+
+
+  .header-icons-list {
+    display: flex;
+    margin-left: auto;
+    gap: 27px;
+    padding-top: 24px;
+    padding-bottom: 36px;
+  }
+
+  .header-icons-item {}
+
+  .header-icons-link {}
+
+  .header-promo {
+    width: 24px;
+    height: 24px;
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-promo:hover,
+  .header-promo:focus {
+    fill: var(--main-accent-color);
+  }
 }
