--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,48 @@
-<header>
-  <h1>Hello world</h1>
+<header class="header container">
+  <nav class="header-nav">
+    <a href="#" class="header-title"
+      ><span class="header-title two">SIMPLY</span> CHOCOLATE
+    </a>
+    <a href="#" class="header-logo-titile">
+      <svg class="header-logo">
+        <use href="../img/sprite.svg#icon-choco-logo24"></use>
+      </svg>
+    </a>
+    <ul class="header-list">
+      <li class="header-item"><a href="" class="header-item-link">Home</a></li>
+      <li class="header-item">
+        <a href="" class="header-item-link">How it’s made?</a>
+      </li>
+      <li class="header-item">
+        <a href="" class="header-item-link">Our products</a>
+      </li>
+      <li class="header-item">
+        <a href="" class="header-item-link">Top sellers</a>
+      </li>
+      <li class="header-item">
+        <a href="" class="header-item-link">Chocolate is loved</a>
+      </li>
+    </ul>
+  </nav>
+  <button type="header-button" class="header-mobile-menu-open">
+    <svg class="header-mobile-menu-open-icon">
+      <use href="../img/sprite.svg#icon-mob-burger"></use>
+    </svg>
+  </button>
+  <ul class="header-icons-list">
+    <li class="header-icons-item">
+      <a href="" class="header-icons-link">
+        <svg class="header-promo">
+          <use href="../img/sprite.svg#icon-instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="header-icons-item">
+      <a href="" class="header-icons-link">
+        <svg class="header-promo">
+          <use href="../img/sprite.svg#icon-twitter"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
 </header>
