--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -131,35 +131,35 @@ body {
 
 @media screen and (min-width: 375px) {
   .container {
-    width: 375px;
+    width: 365px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    width: 734px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    width: 1166px;
   }
 }
 .section {
-  padding-top: 128px;
-  padding-bottom: 128px;
+  padding-top: 72px;
+  padding-bottom: 72px;
 }
-@media screen and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .section {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1200px) {
   .section {
-    padding-top: 72px;
-    padding-bottom: 72px;
+    padding-top: 128px;
+    padding-bottom: 128px;
   }
 }
 
