--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -1,1 +1,119 @@
-/* Out Products Section */
+.products {
+}
+
+.products-title {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+}
+.products-title-span {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--main-accent-color);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+}
+
+.products-wrapper {
+  width: 270px;
+  height: 364px;
+  background-color: var(--white-color);
+  border: 1px solid rgba(17, 17, 17, 0.1);
+
+  border-radius: 15px;
+}
+
+.products-item {
+}
+.products-name {
+  color: var(--primary-color);
+  font-weight: 600;
+
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: -0.02em;
+  font-family: 'Montserrat', sans-serif;
+
+  margin-bottom: 2px;
+  text-transform: uppercase;
+}
+
+.products-description {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 0.86;
+  letter-spacing: -0.02em;
+  color: rgba(17, 17, 17, 0.7);
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 18px;
+}
+.products-button {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17.07px;
+  border: 1px solid;
+  background-color: #fafafa;
+  border-radius: 100px;
+  border-color: rgba(17, 17, 17, 0.1);
+  padding: 8px 20px;
+  color: var(--primary-color);
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  width: 335px;
+  height: 364px;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
+  margin: 32px auto 8px;
+}
+
+.swiper-pagination {
+  position: static;
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--main-accent-color);
+  width: 28px;
+  height: 13px;
+  border-radius: 100px;
+}
+@media screen and (max-width: 375px) {
+}
+@media screen and (max-width: 768px) {
+  .swiper-pagination {
+    margin-top: 32px;
+  }
+  .products-title {
+    margin-bottom: 50px;
+  }
+  .swiper-slide {
+    width: 270px;
+  }
+}
+@media screen and (max-width: 1200px) {
+}
