--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -1,1 +1,90 @@
-<section></section>
+<section class="products">
+ <div class="container swiper">
+         <h2 class="products-title ">Our <span class="products-title-span">pRODUCTS<span ></h2>
+                <ul class="products-list swiper-wrapper">
+                    <li class="products-item swiper-slide">
+                      <div class="products-wrapper">
+                          <img class="products-image" srcset="../img/our-products/orange-1x.jpg 1x,
+                           ../img/our-products/orange-2x.jpg 2x"
+                          src="../img/our-products/orange-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
+                          <h3 class="products-name">ORANGE</h3>
+                          <p class="products-description">Dark chocolate</p>
+                          <button class="products-button">45 UAH</button> 
+                      </div >   
+                    </li>
+                      <li class="products-item swiper-slide">
+                        <div class="products-wrapper">
+                      <img class="products-image" srcset="../img/our-products/apple&cranberry-1x.jpg 1x,
+                      ../img/our-products/apple&cranberry-2x.jpg 2x"
+                      src="../img/our-products/apple&cranberry-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
+                      <h3 class="products-name">APPLE&CRANBERRY</h3>
+                      <p class="products-description">Milk chocolate</p>
+                      <button class="products-button">50 UAH</button>
+                      </div>
+                    </li>
+                        <li class="products-item swiper-slide">
+                            <div class="products-wrapper">
+                      <img class="products-image" srcset="../img/our-products/lime&sea-1x.jpg 1x,
+                      ../img/our-products/lime&sea-2x.jpg 2x" 
+                      src="../img/our-products/lime&sea-1x.jpg" alt="bar of chocolate" width="230" height="201" />
+                      <h3 class="products-name">lime&sea salt</h3>
+                      <p class="products-description">Dark chocolate</p>
+                      <button class="products-button">60 UAH</button>
+                      </div>    
+                    </li>
+                      <li class="products-item swiper-slide">
+                        <div class="products-wrapper" >
+                      <img class="products-image" srcset="../img/our-products/pineapple-1x.jpg 1x,
+                      ../img/our-products/pineapple-2x.jpg 2x"
+                       src="../img/our-products/pineapple-1x.jpg" alt="bar of chocolate" width="230" height="201" />
+                      <h3 class="products-name">pineapple</h3>
+                      <p class="products-description">Dark chocolate</p>
+                      <button class="products-button">54 UAH</button>
+                      </div>
+                    </li>
+                        <li class="products-item swiper-slide">
+                            <div class="products-wrapper" >
+                      <img class="products-image" srcset="../img/our-products/classic-milk-1x.jpg 1x, 
+                      ../img/our-products/classic-milk-2x.jpg 2x" 
+                      src="../img/our-products/classic-milk-1x.jpg" alt="bar of chocolate" width="230" height="201" />
+                      <h3 class="products-name">Classic</h3>
+                      <p class="products-description">Milk chocolate</p>
+                      <button class="products-button">45 UAH</button>   
+                      </div> 
+                    </li>
+                      <li class="products-item swiper-slide">
+                        <div class="products-wrapper" >
+                      <img class="products-image" srcset="../img/our-products/honey-1x.jpg 1x,
+                      ../img/our-products/honey-2x.jpg 2x" 
+                      src="../img/our-products/honey-1x.jpg" alt="bar of chocolate" width="230" height="201" />
+                      <h3 class="products-name">honey</h3>
+                      <p class="products-description">Milk chocolate</p>
+                      <button class="products-button">50 UAH</button>
+                      </div>
+                    </li>
+                        <li class="products-item swiper-slide">
+                     <div class="products-wrapper" >
+                      <img class="products-image" srcset="../img/our-products/fruits-1x.jpg 1x,
+                      ../img/our-products/fruits-2x.jpg 2x"
+                       src="../img/our-products/fruits-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
+                      <h3 class="products-name">Roasted fruits</h3>
+                      <p class="products-description">Dark chocolate</p>
+                      <button class="products-button">66 UAH</button>    
+                      </div>
+                    </li>
+                      <li class="products-item swiper-slide">
+                        <div class="products-wrapper" >
+                      <img class="products-image" srcset="../img/our-products/classic-white-1x.jpg 1x,
+                      ../img/our-products/classic-white-2x.jpg 2x"
+                       src="../img/our-products/classic-white-1x.jpg" alt="bar of chocolate" width="230" height="201" />
+                      <h3 class="products-name">Classic</h3>
+                      <p class="products-description">White chocolate</p>
+                      <button class="products-button">54 UAH</button>
+                    </div>
+                    </li>
+                </ul>
+        
+  <div class="swiper-pagination"></div>
+
+    </div>
+</section>
