update, add box-shadow

--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -4,7 +4,7 @@
                 <ul class="products-list swiper-wrapper">
                     <li class="products-item swiper-slide">
                       <div class="products-wrapper">
-                          <img class="products-image" srcset="../img/our-products/orange-1x.jpg 1x,
+                          <img srcset="../img/our-products/orange-1x.jpg 1x,
                            ../img/our-products/orange-2x.jpg 2x"
                           src="../img/our-products/orange-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
                           <h3 class="products-name">ORANGE</h3>
@@ -14,7 +14,7 @@
                     </li>
                       <li class="products-item swiper-slide">
                         <div class="products-wrapper">
-                      <img class="products-image" srcset="../img/our-products/apple&cranberry-1x.jpg 1x,
+                      <img srcset="../img/our-products/apple&cranberry-1x.jpg 1x,
                       ../img/our-products/apple&cranberry-2x.jpg 2x"
                       src="../img/our-products/apple&cranberry-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
                       <h3 class="products-name">APPLE&CRANBERRY</h3>
@@ -24,7 +24,7 @@
                     </li>
                         <li class="products-item swiper-slide">
                             <div class="products-wrapper">
-                      <img class="products-image" srcset="../img/our-products/lime&sea-1x.jpg 1x,
+                      <img srcset="../img/our-products/lime&sea-1x.jpg 1x,
                       ../img/our-products/lime&sea-2x.jpg 2x" 
                       src="../img/our-products/lime&sea-1x.jpg" alt="bar of chocolate" width="230" height="201" />
                       <h3 class="products-name">lime&sea salt</h3>
@@ -34,7 +34,7 @@
                     </li>
                       <li class="products-item swiper-slide">
                         <div class="products-wrapper" >
-                      <img class="products-image" srcset="../img/our-products/pineapple-1x.jpg 1x,
+                      <img srcset="../img/our-products/pineapple-1x.jpg 1x,
                       ../img/our-products/pineapple-2x.jpg 2x"
                        src="../img/our-products/pineapple-1x.jpg" alt="bar of chocolate" width="230" height="201" />
                       <h3 class="products-name">pineapple</h3>
@@ -44,7 +44,7 @@
                     </li>
                         <li class="products-item swiper-slide">
                             <div class="products-wrapper" >
-                      <img class="products-image" srcset="../img/our-products/classic-milk-1x.jpg 1x, 
+                      <img srcset="../img/our-products/classic-milk-1x.jpg 1x, 
                       ../img/our-products/classic-milk-2x.jpg 2x" 
                       src="../img/our-products/classic-milk-1x.jpg" alt="bar of chocolate" width="230" height="201" />
                       <h3 class="products-name">Classic</h3>
@@ -54,7 +54,7 @@
                     </li>
                       <li class="products-item swiper-slide">
                         <div class="products-wrapper" >
-                      <img class="products-image" srcset="../img/our-products/honey-1x.jpg 1x,
+                      <img srcset="../img/our-products/honey-1x.jpg 1x,
                       ../img/our-products/honey-2x.jpg 2x" 
                       src="../img/our-products/honey-1x.jpg" alt="bar of chocolate" width="230" height="201" />
                       <h3 class="products-name">honey</h3>
@@ -64,7 +64,7 @@
                     </li>
                         <li class="products-item swiper-slide">
                      <div class="products-wrapper" >
-                      <img class="products-image" srcset="../img/our-products/fruits-1x.jpg 1x,
+                      <img srcset="../img/our-products/fruits-1x.jpg 1x,
                       ../img/our-products/fruits-2x.jpg 2x"
                        src="../img/our-products/fruits-1x.jpg" alt="bar of chocolate"  width="230" height="201"/>
                       <h3 class="products-name">Roasted fruits</h3>
@@ -74,7 +74,7 @@
                     </li>
                       <li class="products-item swiper-slide">
                         <div class="products-wrapper" >
-                      <img class="products-image" srcset="../img/our-products/classic-white-1x.jpg 1x,
+                      <img srcset="../img/our-products/classic-white-1x.jpg 1x,
                       ../img/our-products/classic-white-2x.jpg 2x"
                        src="../img/our-products/classic-white-1x.jpg" alt="bar of chocolate" width="230" height="201" />
                       <h3 class="products-name">Classic</h3>
