--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -1,6 +1,3 @@
-.products {
-}
-
 .products-title {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
@@ -22,16 +19,12 @@
   text-transform: uppercase;
 }
 
-.products-wrapper {
-  width: 270px;
+.products-item {
+  width: 335px;
   height: 364px;
   background-color: var(--white-color);
   border: 1px solid rgba(17, 17, 17, 0.1);
-
   border-radius: 15px;
-}
-
-.products-item {
 }
 .products-name {
   color: var(--primary-color);
@@ -65,6 +58,7 @@
   border-color: rgba(17, 17, 17, 0.1);
   padding: 8px 20px;
   color: var(--primary-color);
+  margin-bottom: 32px;
 }
 
 .swiper {
@@ -77,11 +71,8 @@
   display: flex;
   flex-direction: column;
   background: #fff;
-  width: 335px;
-  height: 364px;
-  justify-content: center;
-  align-items: center;
 }
+
 .swiper-slide img {
   display: block;
   margin: 32px auto 8px;
@@ -102,6 +93,10 @@
   height: 13px;
   border-radius: 100px;
 }
+
+.swiper-slide-active {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 @media screen and (max-width: 375px) {
 }
 @media screen and (max-width: 768px) {
@@ -111,7 +106,7 @@
   .products-title {
     margin-bottom: 50px;
   }
-  .swiper-slide {
+  .products-item {
     width: 270px;
   }
 }
