--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,1 +1,8 @@
-<section></section>
+<section>
+    <h1>TOP SELLERS</h1>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <p>Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+    <button type="button">Buy now   </button>
+</section>
