--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,9 +1,11 @@
-<section class="how-its-made">
+<section class="how-its-made"  id="how-its-made">
     <div class="container how-its-made-container">
 <h2 class="how-its-made-title">HOW IT’S <span class="how-its-made-span">MADE?</span> </h2>
 <div class="how-its-made-wrap">
+    <div class="how-its-made-video-wrap">
 <iframe class="how-it-made-video" src="https://www.youtube.com/embed/xqXOMDQhDyU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
- <div class="how-its-made-list-wrap"> 
+</div>
+<div class="how-its-made-list-wrap"> 
 <h3 class="how-its-made-list-title">Try  our chocolates today and discover the perfect balance of flavor</h3>
 <ul class="how-its-made-list">
     <li class="how-its-made-item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
