--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
-<section class="hero">
-  <div class="container">
+<section class="container hero">
+  <div class="hero-contain">
     <h1 class="visually-hidden">Simply Chocolate</h1>
     <p class="hero-descrip">
       Treat yourself or a loved one to our finest ingredients for a moment of
@@ -7,10 +7,8 @@
     </p>
     <div class="hero-buttons">
       <button class="hero-btn">Buy now</button>
-      <a href="" id="how it's made" class="hero-btn hero-how-it"
-        >How it's made</a
-      >
-      <a href="" id="footer" class="hero-scroll"
+      <a href="#how-its-made" class="hero-btn hero-how-it">How it's made</a>
+      <a href="#footer" class="hero-scroll"
         >scroll down
         <span class="scroll-wrap"
           ><svg width="16" height="16" class="scroll-icon">
