--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,7 +19,7 @@
   height: 17.18px;
 }
 
-.header-logo-titile {
+.header-logo-title {
   margin-left: 6.65px;
   padding-top: 24.68px;
 }
@@ -63,11 +63,146 @@
   .header-icons-list {
     display: none;
   }
+
+  .header-sidebar {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 220px;
+    height: 100%;
+    top: 0;
+    left: 43%;
+    background-color: #1E1823;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition-property: opacity, visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-sidebar.is-hidden {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+
+  }
+
+  .header-sidebar-link {
+
+    padding: 0;
+    line-height: 0;
+    border: 0;
+  }
+
+  .header-sidebar-close {
+    fill: #FFFFFF;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 24px;
+    height: 24px;
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-sidebar-close:hover,
+  .header-sidebar-close:focus {
+    fill: var(--main-accent-color);
+  }
+
+  .header-sidebar-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 136px;
+    margin-left: 50px;
+  }
+
+  .header-sidebar-item {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    align-items: center;
+    display: block;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
+
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-sidebar-item:hover,
+  .header-sidebar-item:focus {
+    color: var(--main-accent-color);
+  }
+
+  .header-sidebar-item-link {
+    display: inline-block;
+  }
+
+  .header-sidebar-item-link:after {
+    content: '';
+
+    position: relative;
+    top: 8px;
+    display: block;
+    width: 100%;
+    height: 0;
+    border: 1px solid #FD9222;
+    background-color: var(--main-accent-color);
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+  }
+
+  .header-sidebar-item-link:hover:after,
+  .header-sidebar-item-link:focus:after {
+    opacity: 1;
+  }
+
+
+  .header-sidebar-icons-list {
+    display: flex;
+    gap: 19px;
+    margin-left: 21.83px;
+    margin-top: auto;
+  }
+
+  .header-sidebar-promo {
+    width: 22px;
+    height: 22px;
+    fill: white;
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-sidebar-promo:hover,
+  .header-sidebar-promo:focus {
+    fill: var(--main-accent-color);
+  }
+
 }
 
 @media screen and (min-width: 768px) {
   .container {
     width: 734px;
+  }
+
+  .header-sidebar {
+    left: 69%;
   }
 }
 
