--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <a href="#" class="header-title"
       ><span class="header-title two">SIMPLY</span> CHOCOLATE
     </a>
-    <a href="#" class="header-logo-titile">
+    <a href="#" class="header-logo-title">
       <svg class="header-logo">
         <use href="../img/sprite.svg#icon-choco-logo24"></use>
       </svg>
@@ -24,7 +24,7 @@
       </li>
     </ul>
   </nav>
-  <button type="header-button" class="header-mobile-menu-open">
+  <button type="header-button" class="header-mobile-menu-open" data-modal-open>
     <svg class="header-mobile-menu-open-icon">
       <use href="../img/sprite.svg#icon-mob-burger"></use>
     </svg>
@@ -45,4 +45,44 @@
       </a>
     </li>
   </ul>
+  <div class="header-sidebar" data-modal>
+    <button class="header-sidebar-link" data-modal-close>
+      <svg class="header-sidebar-close">
+        <use href="../img/sprite.svg#icon-close-modal24"></use>
+      </svg>
+    </button>
+    <ul class="header-sidebar-list">
+      <li class="header-sidebar-item">
+        <a href="" class="header-sidebar-item-link">Home</a>
+      </li>
+      <li class="header-sidebar-item">
+        <a href="" class="header-sidebar-item-link">How it’s made?</a>
+      </li>
+      <li class="header-sidebar-item">
+        <a href="" class="header-sidebar-item-link">Our products</a>
+      </li>
+      <li class="header-sidebar-item">
+        <a href="" class="header-sidebar-item-link">Top sellers</a>
+      </li>
+      <li class="header-sidebar-item">
+        <a href="" class="header-sidebar-item-link">Chocolate is loved</a>
+      </li>
+    </ul>
+    <ul class="header-sidebar-icons-list">
+      <li class="header-sidebar-icons-item">
+        <a href="" class="header-sidebar-icons-link">
+          <svg class="header-sidebar-promo">
+            <use href="../img/sprite.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-sidebar-icons-item">
+        <a href="" class="header-sidebar-icons-link">
+          <svg class="header-sidebar-promo">
+            <use href="../img/sprite.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 </header>
