--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,7 +12,7 @@
         >scroll down
         <span class="scroll-wrap"
           ><svg width="16" height="16" class="scroll-icon">
-            <use href="./img/sprite.svg#icon-scroll-down22"></use>
+            <use href="/img/sprite.svg#icon-scroll-down22"></use>
           </svg>
         </span>
       </a>
