--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -15,12 +15,12 @@
         <div class="card choco">
           <img
             srcset="
-              ../img/uniqe-components/choco@1x.png 1x,
-              ../img/uniqe-components/choco@2x.png 2x
+              /img/uniqe-components/choco@1x.png 1x,
+              /img/uniqe-components/choco@2x.png 2x
             "
             class="card-img"
             width="224"
-            src="../img/uniqe-components/choco@1x.png"
+            src="/img/uniqe-components/choco@1x.png"
             alt="chocolate"
           />
           <p class="card-desc">MILK CHOCOLATE</p>
@@ -48,12 +48,12 @@
         <div class="card milk">
           <img
             srcset="
-              ../img/uniqe-components/milk@1x.png  1x,
-              ../img/uniqe-components/milko@2x.png 2x
+              /img/uniqe-components/milk@1x.png  1x,
+              /img/uniqe-components/milko@2x.png 2x
             "
             class="card-img"
             width="224"
-            src="../img/uniqe-components/milk@1x.png"
+            src="/img/uniqe-components/milk@1x.png"
             alt="milk"
           />
           <p class="card-desc">MILK</p>
@@ -82,12 +82,12 @@
         <div class="card nuts">
           <img
             srcset="
-              ../img/uniqe-components/nuts@1x.png 1x,
-              ../img/uniqe-components/nuts@2x.png 2x
+              /img/uniqe-components/nuts@1x.png 1x,
+              /img/uniqe-components/nuts@2x.png 2x
             "
             class="card-img"
             width="224"
-            src="../img/uniqe-components/nuts@1x.png"
+            src="/img/uniqe-components/nuts@1x.png"
             alt="nuts"
           />
           <p class="card-desc">NUTS</p>
@@ -115,12 +115,12 @@
         <div class="card chips">
           <img
             srcset="
-              ../img/uniqe-components/chips@1x.png 1x,
-              ../img/uniqe-components/chips@2x.png 2x
+              /img/uniqe-components/chips@1x.png 1x,
+              /img/uniqe-components/chips@2x.png 2x
             "
             class="card-img"
             width="224"
-            src="../img/uniqe-components/chips@1x.png"
+            src="/img/uniqe-components/chips@1x.png"
             alt="chocolate chips"
           />
           <p class="card-desc">SEMI - SWEET CHOCOLATE</p>
