--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,8 +1,6 @@
 .header-title {
-  font-family: 'Montserrat';
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.1;
   letter-spacing: -0.03em;
   margin-top: 25px;
   margin-bottom: 19px;
@@ -12,11 +10,6 @@
 
 .header-title .two {
   font-style: italic;
-}
-
-.header-logo {
-  width: 14.32px;
-  height: 17.18px;
 }
 
 .header-logo-title {
@@ -39,7 +32,11 @@
 
   .header-title {
     font-size: 14px;
-    line-height: 1.29;
+  }
+
+  .header-logo {
+    width: 21px;
+    height: 21px;
   }
 
   .header-mobile-menu-open {
@@ -72,7 +69,7 @@
     height: 100%;
     top: 0;
     left: 43%;
-    background-color: #1E1823;
+    background-color: var(--secondary-color);
     z-index: 1000;
     opacity: 0;
     visibility: hidden;
@@ -91,14 +88,13 @@
   }
 
   .header-sidebar-link {
-
     padding: 0;
     line-height: 0;
     border: 0;
   }
 
   .header-sidebar-close {
-    fill: #FFFFFF;
+    fill: var(--white-color);
     position: absolute;
     top: 20px;
     right: 20px;
@@ -124,15 +120,11 @@
   }
 
   .header-sidebar-item {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     align-items: center;
     display: block;
-    letter-spacing: -0.02em;
-    color: #FFFFFF;
+    color: var(--white-color);
 
 
     transition-property: color;
@@ -157,7 +149,7 @@
     display: block;
     width: 100%;
     height: 0;
-    border: 1px solid #FD9222;
+    border: 1px solid var(--main-accent-color);
     background-color: var(--main-accent-color);
 
     transition-property: opacity;
@@ -171,7 +163,6 @@
     opacity: 1;
   }
 
-
   .header-sidebar-icons-list {
     display: flex;
     gap: 19px;
@@ -182,7 +173,7 @@
   .header-sidebar-promo {
     width: 22px;
     height: 22px;
-    fill: white;
+    fill: var(--white-color);
 
     transition-property: fill;
     transition-duration: 250ms;
@@ -204,6 +195,8 @@
   .header-sidebar {
     left: 69%;
   }
+
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -218,8 +211,12 @@
   }
 
   .header-logo {
-    width: 16.36px;
-    height: 19.64px;
+    width: 24px;
+    height: 24px;
+  }
+
+  .header-title {
+    font-size: 18px;
   }
 
   .header-mobile-menu-open-icon {
@@ -238,12 +235,9 @@
   }
 
   .header-item-link {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1, 14;
-    letter-spacing: -0.02em;
+    line-height: 1.14;
+
 
     transition-property: color;
     transition-duration: 250ms;
@@ -255,7 +249,6 @@
     color: var(--main-accent-color);
   }
 
-
   .header-icons-list {
     display: flex;
     margin-left: auto;
@@ -263,10 +256,6 @@
     padding-top: 24px;
     padding-bottom: 36px;
   }
-
-  .header-icons-item {}
-
-  .header-icons-link {}
 
   .header-promo {
     width: 24px;
