--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
     </a>
     <a href="#" class="header-logo-title">
       <svg class="header-logo">
-        <use href="../img/sprite.svg#icon-choco-logo24"></use>
+        <use href="/img/sprite.svg#icon-choco-logo24"></use>
       </svg>
     </a>
     <ul class="header-list">
@@ -26,21 +26,21 @@
   </nav>
   <button type="header-button" class="header-mobile-menu-open" data-modal-open>
     <svg class="header-mobile-menu-open-icon">
-      <use href="../img/sprite.svg#icon-mob-burger"></use>
+      <use href="/img/sprite.svg#icon-mob-burger"></use>
     </svg>
   </button>
   <ul class="header-icons-list">
     <li class="header-icons-item">
       <a href="" class="header-icons-link">
         <svg class="header-promo">
-          <use href="../img/sprite.svg#icon-instagram"></use>
+          <use href="/img/sprite.svg#icon-instagram"></use>
         </svg>
       </a>
     </li>
     <li class="header-icons-item">
       <a href="" class="header-icons-link">
         <svg class="header-promo">
-          <use href="../img/sprite.svg#icon-twitter"></use>
+          <use href="/img/sprite.svg#icon-twitter"></use>
         </svg>
       </a>
     </li>
@@ -48,7 +48,7 @@
   <div class="header-sidebar" data-modal>
     <button class="header-sidebar-link" data-modal-close>
       <svg class="header-sidebar-close">
-        <use href="../img/sprite.svg#icon-close-modal24"></use>
+        <use href="/img/sprite.svg#icon-close-modal24"></use>
       </svg>
     </button>
     <ul class="header-sidebar-list">
@@ -72,14 +72,14 @@
       <li class="header-sidebar-icons-item">
         <a href="" class="header-sidebar-icons-link">
           <svg class="header-sidebar-promo">
-            <use href="../img/sprite.svg#icon-instagram"></use>
+            <use href="/img/sprite.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="header-sidebar-icons-item">
         <a href="" class="header-sidebar-icons-link">
           <svg class="header-sidebar-promo">
-            <use href="../img/sprite.svg#icon-twitter"></use>
+            <use href="/img/sprite.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
