--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -1,1 +1,17 @@
-<section></section>
+<div class="modal" data-modal="1">
+  <svg class="modal-cross js-modal-close">
+    <use href="/img/sprite.svg#icon-close-modal24"></use>
+  </svg>
+  <div class="subsribe-img">
+    <img
+      srcset="
+        /img/modal-subscribe/chocolate@1x.jpg 1x,
+        /img/modal-subscribe/chocolate@2x.jpg 2x
+      "
+      class="card-img"
+      width="224"
+      src="/img/modal-subscribe/chocolate@1x.jpg 1x"
+      alt="chocolate chips"
+    />
+  </div>
+</div>
