--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -8,10 +8,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/orange-1x.jpg 1x,
-              ../img/our-products/orange-2x.jpg 2x
+              /img/our-products/orange-1x.jpg 1x,
+              /img/our-products/orange-2x.jpg 2x
             "
-            src="../img/our-products/orange-1x.jpg"
+            src="/img/our-products/orange-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -28,7 +28,7 @@
               ../img/our-products/apple&cranberry-1x.jpg 1x,
               ../img/our-products/apple&cranberry-2x.jpg 2x
             "
-            src="../img/our-products/apple&cranberry-1x.jpg"
+            src="/img/our-products/apple&cranberry-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -42,10 +42,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/lime&sea-1x.jpg 1x,
-              ../img/our-products/lime&sea-2x.jpg 2x
+              /img/our-products/lime&sea-1x.jpg 1x,
+              /img/our-products/lime&sea-2x.jpg 2x
             "
-            src="../img/our-products/lime&sea-1x.jpg"
+            src="/img/our-products/lime&sea-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -59,10 +59,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/pineapple-1x.jpg 1x,
-              ../img/our-products/pineapple-2x.jpg 2x
+              /img/our-products/pineapple-1x.jpg 1x,
+              /img/our-products/pineapple-2x.jpg 2x
             "
-            src="../img/our-products/pineapple-1x.jpg"
+            src="/img/our-products/pineapple-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -76,10 +76,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/classic-milk-1x.jpg 1x,
-              ../img/our-products/classic-milk-2x.jpg 2x
+              /img/our-products/classic-milk-1x.jpg 1x,
+              /img/our-products/classic-milk-2x.jpg 2x
             "
-            src="../img/our-products/classic-milk-1x.jpg"
+            src="/img/our-products/classic-milk-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -93,10 +93,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/honey-1x.jpg 1x,
-              ../img/our-products/honey-2x.jpg 2x
+              /img/our-products/honey-1x.jpg 1x,
+              /img/our-products/honey-2x.jpg 2x
             "
-            src="../img/our-products/honey-1x.jpg"
+            src="/img/our-products/honey-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -110,10 +110,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/fruits-1x.jpg 1x,
-              ../img/our-products/fruits-2x.jpg 2x
+              /img/our-products/fruits-1x.jpg 1x,
+              /img/our-products/fruits-2x.jpg 2x
             "
-            src="../img/our-products/fruits-1x.jpg"
+            src="/img/our-products/fruits-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
@@ -127,10 +127,10 @@
         <div class="products-wrapper">
           <img
             srcset="
-              ../img/our-products/classic-white-1x.jpg 1x,
-              ../img/our-products/classic-white-2x.jpg 2x
+              /img/our-products/classic-white-1x.jpg 1x,
+              /img/our-products/classic-white-2x.jpg 2x
             "
-            src="../img/our-products/classic-white-1x.jpg"
+            src="/img/our-products/classic-white-1x.jpg"
             alt="bar of chocolate"
             width="230"
             height="201"
