--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,2 +1,87 @@
 /* Advantages Section */
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+}
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.list {
+  display: flex;
+  justify-content: space-between;
+  padding: 70px;
+  gap: 70px;
+  list-style: none;
+}
+.container {
+  width: 1200px;
+  padding-left: 50px;
+  padding-right: 50px;
+  background-color: #000000;
+  margin: 0 auto;
+  outline: 1px solid red;
+}
+.advantages-list {
+  width: 308px;
+}
+.advantages-text::after {
+  content: '';
+  width: 124px;
+  height: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  transform: rotate(90deg);
+  display: flex;
+}
+.advantages-link {
+  width: 100%;
+  height: 62px;
+  width: 62px;
+  color: #fd9222;
+  background-color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 7.3px;
+  margin-bottom: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 365px;
+}
 
+.advantages-caption {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+  margin-bottom: 18px;
+}
+.advantages-icon {
+  fill: #fd9222;
+}
+
+.advantages-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.02em;
+  color: rgba(255, 255, 255, 0.7);
+}
