--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,21 +1,21 @@
 <section class="advantages">
   <div class="container">
     <ul class="list">
-      <li class="advantages-list">
-
-<a href="" class="advantages-link">
-          <svg class="advantages-icon" width="32" height="32">
-            <use href="./img/sprite.svg#icon-choco"></use>
-          </svg>
-        </a>
-
-        <h3 class="advantages-caption">Unsurpassed taste</h2>
-        <p class="advantages-text">
-          Crafted with the finest quality cocoa beans and a dedication to
-          perfection, each bite is a decadent experience that simply cannot be
-          matched. Savor the richness and complexity of our Unsurpassed Taste
-          and discover a new level of chocolate bliss.
-        </p>
+        <li class="advantages-list">
+            <a href="" class="advantages-link">
+            <svg class="advantages-icon" width="32" height="32">
+           <use href="./img/sprite.svg#icon-choco"></use>
+            </svg>
+            </a>
+            <h3 class="advantages-caption">Unsurpassed taste</h2>
+            <p class="advantages-text">
+              Crafted with the finest quality cocoa beans and a dedication to
+              perfection, each bite is a decadent experience that simply cannot be
+              matched. Savor the richness and complexity of our Unsurpassed Taste
+              and discover a new level of chocolate bliss.
+            </p>
+        <div class="line"></div>
+        
       </li>
       <li class="advantages-list">
 
