--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -42,14 +42,7 @@ img {
 .advantages-list {
   width: 308px;
 }
-.advantages-text::after {
-  content: '';
-  width: 124px;
-  height: 0px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transform: rotate(90deg);
-  display: flex;
-}
+
 .advantages-link {
   width: 100%;
   height: 62px;
@@ -84,4 +77,24 @@ img {
   line-height: 17px;
   letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 0.7);
+  /* display: flex;
+  justify-content: flex-end;
+
+  align-items: center; */
 }
+
+.line {
+  width: 124px;
+  height: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  transform: rotate(90deg);
+}
+
+/* .advantages-text::after {
+  content: '';
+  width: 124px;
+  height: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  transform: rotate(90deg);
+  display: block;
+} */
