--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,31 +1,30 @@
-<section class="advantages">
-  <div class="container">
-    <ul class="list">
-        <li class="advantages-list">
-            <a href="" class="advantages-link">
-            <svg class="advantages-icon" width="32" height="32">
-           <use href="./img/sprite.svg#icon-choco"></use>
-            </svg>
-            </a>
-            <h3 class="advantages-caption">Unsurpassed taste</h2>
-            <p class="advantages-text">
-              Crafted with the finest quality cocoa beans and a dedication to
-              perfection, each bite is a decadent experience that simply cannot be
-              matched. Savor the richness and complexity of our Unsurpassed Taste
-              and discover a new level of chocolate bliss.
-            </p>
+<section class="advantages section">
+  <div class="container advantages-container">
+    <h2 class="section-title visually-hidden">Advantages</h2>
+    <ul class="advantages-list">
+      <li class="advantages-item">
+        <a href="" class="advantages-link">
+          <svg class="advantages-icon" width="32" height="32">
+            <use href="./img/sprite.svg#icon-choco"></use>
+          </svg>
+        </a>
+        <h3 class="advantages-caption">Unsurpassed taste</h3>
+        <p class="advantages-text">
+          Crafted with the finest quality cocoa beans and a dedication to
+          perfection, each bite is a decadent experience that simply cannot be
+          matched. Savor the richness and complexity of our Unsurpassed Taste
+          and discover a new level of chocolate bliss.
+        </p>
         <div class="line"></div>
-        
       </li>
-      <li class="advantages-list">
-
-<a href="" class="advantages-link">
+      <li class="advantages-item">
+        <a href="" class="advantages-link">
           <svg class="advantages-icon" width="32" height="32">
             <use href="./img/sprite.svg#icon-coin"></use>
           </svg>
         </a>
 
-        <h3 class="advantages-caption">Affordable price</h2>
+        <h3 class="advantages-caption">Affordable price</h3>
         <p class="advantages-text">
           Indulge in high-quality chocolate without breaking the bank with
           Simply Chocolate's selection of affordable treats. Enjoy
@@ -34,15 +33,14 @@
           luxury today.
         </p>
       </li>
-      <li class="advantages-list">
-        
-<a href="" class="advantages-link">
+      <li class="advantages-item">
+        <a href="" class="advantages-link">
           <svg class="advantages-icon" width="32" height="32">
             <use href="./img/sprite.svg#icon-spoon"></use>
           </svg>
         </a>
 
-        <h3 class="advantages-caption">Own production</h2>
+        <h3 class="advantages-caption">Own production</h3>
         <p class="advantages-text">
           We take pride in our own production process, ensuring that every step
           is carefully crafted to perfection. From selecting the finest
