--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,10 +89,9 @@ body {
   --white-color: #ffffff;
   --products-btn-bg: #fafafa;
   --placeholder-color: rgba(64, 64, 64, 0.3);
+  --bgc-color: #1e1823;
   --time-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-:root {
   font-size: 14px;
   line-height: calc(18 / 14);
   font-weight: 400;
