--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -14,10 +14,7 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-.how-its-made-title.section-title  {
-    margin-bottom: 32px;
-    font-size: 20px;
-}
+
 .how-its-made-span {
     color: var(--main-accent-color);
 }
@@ -72,6 +69,12 @@ top: 5px;
     
     }
   }
+  @media screen and (max-width: 767px) {
+    .how-its-made-title.section-title  {
+        margin-bottom: 32px;
+        font-size: 20px;
+    }
+  }
 @media screen and (min-width: 768px) {
     .container.how-its-made-container {
         padding-left: 77px;
@@ -87,10 +90,7 @@ max-height: 400px;
     .how-its-made-title {
         margin-bottom: 50px;
     }
-    .how-its-made-list-wrap{
-        padding: 32px;
-     
-    }
+    
     .how-its-made-list-title{
         margin-bottom: 28px;
     }
