--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -1,4 +1,4 @@
-<section class="components section">
+<section class="components section" id="uniqe-components">
   <div class="container">
     <h2 class="section-title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
