--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="container hero">
+<section class="container hero" id="home">
   <div class="hero-contain">
     <h1 class="visually-hidden">Simply Chocolate</h1>
     <p class="hero-descrip">
