--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="our-products">
   <div class="container swiper">
     <h2 class="products-title">
       Our <span class="products-title-span">pRODUCTS</span>
