--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -48,7 +48,7 @@
     <div class="footer-line"></div>
     <ul class="footer-list">
       <li class="footer-item">
-        <a class="footer-link" href="#home">Home</a>
+        <a class="footer-link" href="../index.html">Home</a>
       </li>
       <li class="footer-item">
         <a class="footer-link" href="#how-its-made">How it’s made?</a>
