--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,6 +76,10 @@
     url(/fonts/Montserrat-BoldItalic.woff2) format('woff2');
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
 }
