--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -1,6 +1,6 @@
-<section class="section" id="our-products">
+<section class="section products" id="our-products">
   <div class="container swiper">
-    <h2 class="products-title section-title">
+    <h2 class="section-title products-title">
       Our <span class="products-title-span section-title-accent">pRODUCTS</span>
     </h2>
     <ul class="products-list swiper-wrapper">
