--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -1,6 +1,10 @@
-.products-title {
+.section.products {
+  padding-top: 0;
+}
+.section-title.products-title {
   text-transform: uppercase;
   margin-bottom: 32px;
+  font-size: 20px;
 }
 .section-title-accent {
   font-weight: 600;
@@ -84,27 +88,27 @@
 .swiper-slide-active {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-@media screen and (max-width: 375px) {
-  .section-title .products-title {
-    font-size: 20px;
-  }
+@media screen and (min-width: 375px) {
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .swiper-pagination {
     margin-top: 32px;
   }
-  .products-title {
-    margin-bottom: 50px;
-  }
+
   .products-item {
     width: 270px;
   }
-  .products-title {
+  .section-title.products-title {
     font-size: 24px;
   }
+
   .products-title-span {
     font-size: 24px;
   }
+  .section-title.products-title {
+    margin-bottom: 50px;
+  }
 }
-@media screen and (max-width: 1200px) {
+
+@media screen and (min-width: 1200px) {
 }
